-[FRONTEND] Fixing some broken styles.

--- a/Printer3D-frontend/src/app/modules/inventory/panels/v1-new-model-panel/v1-new-model-panel.component.scss
+++ b/Printer3D-frontend/src/app/modules/inventory/panels/v1-new-model-panel/v1-new-model-panel.component.scss
@@ -24,14 +24,12 @@
     margin-top: 10px;
 }
 
-.label {
-    margin-left: 10px;
-}
-
-.label-width {
-    // width: 80%;
-}
-
+// .label {
+//     margin-left: 10px;
+// }
+// .label-width {
+//     // width: 80%;
+// }
 .price-width {
     width: 100px;
 }
@@ -53,7 +51,7 @@
 }
 
 .left-margin {
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .top-margin {
