--- a/Printer3D-frontend/src/app/modules/renders/v1-part-render/v1-part-render.component.scss
+++ b/Printer3D-frontend/src/app/modules/renders/v1-part-render/v1-part-render.component.scss
@@ -29,7 +29,7 @@
 }
 
 .material-width {
-    min-width: 230px;
+    min-width: 240px;
 }
 
 .color-width {
@@ -41,16 +41,9 @@
 }
 
 .active-width {
-    min-width: 90px;
+    min-width: 55px;
 }
 
-// .corner-bottom {
-//     position: absolute;
-//     width: 13px;
-//     bottom: -1px;
-//     right: -8px;
-//     fill: orangered;
-// }
 .active {
     fill: green;
 }
